# doorbellAssistant

./: .gitignore  README.md  build.gradle.kts  gradle.properties  publish-github-packages.sh  publish-phone-module.sh  settings.gradle.kts
.github/workflows/: publish.yml
app/: .gitignore  build-vosk.sh  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: logback.xml
app/src/main/assets/piper/cs/: cs.json
app/src/main/java/org/mjdev/doorbellassistant/vpn/: AdVpnService.java  AdVpnThread.java  Command.java  Configuration.java  DnsPacketProxy.java  FileHelper.java  NotificationChannels.java  RuleDatabase.java  RuleDatabaseItemUpdateRunnable.java  RuleDatabaseUpdateJobService.java  RuleDatabaseUpdateTask.java  VpnWatchdog.java  (+1 more)
app/src/main/res/mipmap-xxhdpi/: ic_banner.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/xml/: backup_rules.xml  network_security_config.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
phone/: CHANGELOG.md  GITHUB_PACKAGES.md  PUBLISHING.md  README.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
phone/src/main/: AndroidManifest.xml
phone/src/main/res/values/: colors.xml  strings.xml  themes.xml
piper/: build.gradle.kts  proguard-rules.pro
piper/cpp/: CMakeLists.txt  espeak_wrapper.c
piper/cpp/include/espeak-ng/: speak_lib.h
whisper/: build.gradle.kts
whisper/src/main/jni/: CMakeLists.txt
whisper/src/main/jni/whisper/: CMakeLists.txt  jni.c
whisper/src/main/kotlin/org/mjdev/whisper/: LibWhisper.kt  WhisperCpuConfig.kt
(+400 files in other folders)
